--- a/WebApi/angularApp/app/shared/components/navigation/navigation.component.html
+++ b/WebApi/angularApp/app/shared/components/navigation/navigation.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <!-- begin mobile sidebar expand / collapse button -->
         <div class="navbar-header">
-            <a href="index.html" class="navbar-brand"><span class="navbar-logo"></span> Color Admin</a>
+            <a href="index.html" class="navbar-brand"><span class="navbar-logo"></span>{{ 'PROJECT.NAME' | translate }}</a>
             <button type="button" class="navbar-toggle" data-click="sidebar-toggled">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -92,7 +92,7 @@
                     <li><a href="javascript:;">Calendar</a></li>
                     <li><a href="javascript:;">Setting</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:;">Log Out</a></li>
+                    <li><a (click)="Logout()">Log Out</a></li>
                 </ul>
             </li>
         </ul>
