--- a/WebApi/angularApp/app/shared/components/customfooter/customfooter.component.html
+++ b/WebApi/angularApp/app/shared/components/customfooter/customfooter.component.html
@@ -1,6 +1,22 @@
-
 <!-- begin #footer -->
+
 <div id="footer" class="footer">
-    &copy; 2017 Angular 2 Web API - Nitin Singh All Rights Reserved
+    <form [formGroup]="footerForm">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label class="control-label col-md-10 col-sm-10"> &copy; 2017 Angular 2 Web API - Nitin Singh All Rights Reserved</label>
+                    <div class="col-md-2 col-sm-2">
+                        <select formControlName="language" name="language" class="pull-right form-control" (change)="selectedLanguage($event.target.value)">
+                            <option value="fr">{{ 'COMMON.FRENCH' | translate }}</option>
+                            <option value="en">{{ 'COMMON.ENGLISH' | translate }}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
 </div>
+
 <!-- end #footer -->
